# pyspark-demo

./: .gitignore  .pre-commit-config.yaml  Untitled-1.ipynb  pyproject.toml  requirements.txt
src/: main.py
src/jobs/: ratings_counter.py  square_df.py  square_rdd.py
src/shared/: context.py
