[tool.poetry]
name = "proj1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.4"
pandas = "^2.2.3"
numpy = "<2"
scikit-learn = "^1.6.1"
tabulate = "^0.9.0"
findspark = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
